fix card spacing

--- a/components/homepage-hero-header/styles.pcss
+++ b/components/homepage-hero-header/styles.pcss
@@ -219,9 +219,4 @@
         }
     }
 
-    .content-grid & {
-        + :where(.alignfull) {
-            --flow-space: 0;
-        }
-    }
 }
